site complete - need to add actual content

--- a/fun-time.html
+++ b/fun-time.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Science Fair - Presentations</title>
+    <title>Science Fair - Fun Time</title>
 </head>
 <body>
     <div class="container">
@@ -14,32 +14,39 @@
                     <div class="logo">
                         <a href="index.html"></a>
                     </div>
-                    <h1>Presentation Schedule</h1>
+                    <h1>Fun Time</h1>
                 </header>
                 <main>
                 <section class="spacer"></section>
+                <section>
+                    <h2>Rules</h2>
+                    <p>blurb about the rules and/or link to external site for game</p>
+                </section>
                 <section class="list-presentation">
                     <ol>
                         <li>
                             <span>
-                                1:00 Project One<br/>
-                                <p>Team Leader</p>
+                                Team One<br/>
+                                <p>Name</p>
+                                <p>Name</p>
+                                <p>Name</p>
+                                <p>Name</p>
+                                <p>Name</p>
+                                <p>Name</p>
                             </span>
                             <a href="/team-one.html">View</a>
                         </li>
                         <li>
                             <span>
-                                1:15 Project Two<br/>
-                                <p>Team Leader</p>
+                                Team Two<br/>
+                                <p>Name</p>
+                                <p>Name</p>
+                                <p>Name</p>
+                                <p>Name</p>
+                                <p>Name</p>
+                                <p>Name</p>
                             </span>
-                            <a href="/team-two.html">View</a>
-                        </li>
-                        <li>
-                            <span>
-                                1:30 Project Three<br/>
-                                <p>Team Leader</p>
-                            </span>
-                            <a href="/team-three.html">View</a>
+                            <a href="/team-one.html">View</a>
                         </li>
                     </ol>
                 </section>
