--- a/index.html
+++ b/index.html
@@ -43,25 +43,31 @@
                 <section>
                     <ol>
                         <li>
-                            <span>Bonus</span>
-                            <a href="/bonus.html">View</a>
+                            <span>For Presenters</span>
+                            <a href="/for-presenters.html">View</a>
                         </li>
                         <li>
                             <span>Q&A</span>
-                            <a href="/q-a.html">View</a>
+                            <a href="/q-and-a.html">View</a>
+                        </li>
+                        <li>
+                            <span>Bonus</span>
+                            <a href="/bonus.html">View</a>
                         </li>
                     </ol>
                 </section>
                 <section class="spacer"></section> <!-- for the lines -->
                 <section class="attribution">
                     <span>
-                        Created by: Diana + Tressa + Jess + Jesse
+                        Created by: Diana, Tressa, Jess, + Jesse
                     </span>
                 </section>
             </main>
             <footer>
-                <img class="qrc" src="assets/qrc.png" />
-                <img class="banana" src="assets/banana.svg">
+                <div class="qrc-wrap">
+                    <img class="qrc" src="assets/qrc.png" />
+                    <figcaption>Share this site with team members!</figcaption>
+                </div>
             </footer>
         </div> <!-- inner -->
     </div> <!-- container -->
