site ready for notes - still need ~30% of the copy

--- a/bonus.html
+++ b/bonus.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="/assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
-    <title>Science Fair - Awards</title>
+    <title>Science Fair - Bonus</title>
 </head>
 <body>
     <div class="container">
@@ -15,16 +15,20 @@
                     <div class="logo">
                         <a href="index.html"></a>
                     </div>
-                    <h1>Awards</h1>
+                    <h1>Bonus</h1>
                 </header>
                 <main>
                 <section class="spacer"></section>
                 <section>
-                    <h2>"Winning is more fun than fun is fun."</h2>
-                    <p>- Coach Westerfeld</p>
+                    <h2>Need some inspiration?</h2>
+                    <p>"If you want to make an apple pie from scratch, you must first create the universe."</p>
+                    <p>- <em>Carl Sagan</em></p>
                 </section>
                 <section class="spacer"></section>
-                <section></section>
+                <section class="img-wrap">
+                    <!-- <img src="assets/school-food.png" /> -->
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zSgiXGELjbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </section>
             </main>
         </div>
     </div> 
