--- a/for-presenters.html
+++ b/for-presenters.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
     <title>Science Fair - For Presenters</title>
 </head>
@@ -18,9 +19,24 @@
                 </header>
                 <main>
                 <section class="spacer"></section>
+                <section class="list-presenters">
+                    <h2>Presenting Your Work</h2>
+                    <p>We're so excited to see your project. Here are a few ground rules to know as you prepare:</p>
+                        <ul>
+                            <li>
+                                We've set a tight schedule for today's events. Please stick to the time we've assigned to your presentation. Did you forget? Sorry 'bout ya... but really, check out the schedule ASAP.
+                            </li>
+                            <li>
+                                <em>We will have a timer going as you speak</em> to keep you in the flow. Timekeeper Tressa™️ will offer a 5-minute, 2-minute, and 1-minute warning before ending the presentation.
+                            </li>
+                            <li>
+                                If you haven't already, please submit your presentation here.
+                            </li>
+                        </ul>
+                </section>
                 <section>
-                    <h2>Presenters!</h2>
-                    <p>blurb with information presenters need to know</p>
+                    <p><strong>Questions?</strong> Slack our magic MC, Meghan.
+                        <br><br>And remember: Timekeeper Tressa™️ has the power when you're presenting. If you get cut off...</p>
                 </section>
                 <section class="spacer"></section>
                 <section></section>
