--- a/fun-time.html
+++ b/fun-time.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
     <title>Science Fair - Fun Time</title>
 </head>
@@ -14,44 +15,83 @@
                     <div class="logo">
                         <a href="index.html"></a>
                     </div>
-                    <h1>Fun Time</h1>
+                    <h1>It's FUN Time</h1>
                 </header>
                 <main>
                 <section class="spacer"></section>
                 <section>
-                    <h2>Rules</h2>
-                    <p>blurb about the rules and/or link to external site for game</p>
+                    <h2>What's more fun than having fun?</h2>
+                    <p>Our post-Science Fair plan is simple. We're playing a wholesome game of <strong>Family Feud</strong>. Here's what you need to know.</p>
                 </section>
                 <section class="list-presentation">
+                    <h3>The Rules & Your Team</h3>
+                    <p>We've divided you up into the following teams for the day. These are your people:</p>
                     <ol>
                         <li>
                             <span>
                                 Team One<br/>
-                                <p>Name</p>
-                                <p>Name</p>
-                                <p>Name</p>
-                                <p>Name</p>
-                                <p>Name</p>
-                                <p>Name</p>
+                                <p>Mike</p>
+                                <p>Diana</p>
+                                <p>Amanda</p>
+                                <p>Sara N.</p>
+                                <p>Parker</p>
+                                <p>Jesse</p>
+                                <p>Kate</p>
+                                <p>Piyush</p>
                             </span>
                             <a href="/team-one.html">View</a>
                         </li>
                         <li>
                             <span>
                                 Team Two<br/>
-                                <p>Name</p>
-                                <p>Name</p>
-                                <p>Name</p>
-                                <p>Name</p>
-                                <p>Name</p>
-                                <p>Name</p>
+                                <p>Tina</p>
+                                <p>Meghan</p>
+                                <p>Andy</p>
+                                <p>Sara C.</p>
+                                <p>Brad</p>
+                                <p>Allison</p>
+                                <p>Maria</p>
+                                <p>Spencer</p>
                             </span>
-                            <a href="/team-one.html">View</a>
+                            <a href="/team-two.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                Team Three<br/>
+                                <p>Christian</p>
+                                <p>Laurimar</p>
+                                <p>Kristin</p>
+                                <p>Yhareli</p>
+                                <p>Erica</p>
+                                <p>Ashlyn</p>
+                                <p>TJ</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                Team Four<br/>
+                                <p>Lacey</p>
+                                <p>Cassidy</p>
+                                <p>Katie</p>
+                                <p>Austin</p>
+                                <p>Jake</p>
+                                <p>Kaleem</p>
+                                <p>Patrick</p>
+                                <p>Tressa</p>
+                            </span>
+                            <a href="/team-four.html">View</a>
                         </li>
                     </ol>
                 </section>
+                <section>
+                    <p>Jon Moore is our Steve Harvey! Listen to him for direction on when you're "on stage."</p>
+                    <p>We will be playing three rounds of Family Feud. The first game is Team 1 vs. Team 2; the second is Team 3 vs. Team 4. The winners will proceed to a championship “speed” round. You’ll be on the hot seat here, so get your thinking caps on.</p>
+                    <p>You might remember being surveyed a few weeks ago... well, the questions you answered are reflected in the games!</p>
+                </section>
                 <section class="spacer"></section>
                 <section></section>
+                <br/>
             </main>
         </div>
     </div> 
