--- a/happy-hour.html
+++ b/happy-hour.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
     <title>Science Fair - Happy Hour</title>
 </head>
@@ -25,7 +26,7 @@
                     <p class="attribution-happy-hour">- Ally, Allison, Ashlyn, Diana, Erica, Jess, Jesse, Kate, Meghan, + Tressa</p>
                 </section>
                 <section class="spacer"></section>
-                <section class="gif-wrap"><img class="gif" src="/assets/gob-dance-now.gif" /></section>
+                <section class="img-wrap"><img src="/assets/gob-dance-now.gif" /></section>
             </main>
         </div>
     </div> 
