--- a/lunch.html
+++ b/lunch.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
     <title>Science Fair - Lunch</title>
 </head>
@@ -20,10 +21,12 @@
                 <section class="spacer"></section>
                 <section>
                     <h2>Hungry?</h2>
-                    <p>blurb about what's for lunch or somethin? - maybe a 90s health textbook photo of food</p>
+                    <p>quick blurb about what's for lunch - with a note about anything that might happen during the noon hour block - introductions? work in something about chef ally</p>
                 </section>
                 <section class="spacer"></section>
-                <section></section>
+                <section class="img-wrap">
+                    <img src="assets/school-food.png" />
+                </section>
             </main>
         </div>
     </div> 
