--- a/happy-hour.html
+++ b/happy-hour.html
@@ -26,7 +26,7 @@
                     <p class="attribution-happy-hour">- Ally, Allison, Ashlyn, Diana, Erica, Jess, Jesse, Kate, Meghan, + Tressa</p>
                 </section>
                 <section class="spacer"></section>
-                <section class="img-wrap"><img src="/assets/gob-dance-now.gif" /></section>
+                <section class="img-wrap"><img src="assets/gob-dance-now.gif" /></section>
             </main>
         </div>
     </div> 
