--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
                     <ol>
                         <li>
                             <span>12:00 - Lunch</span>
-                            <a href="/lunch.html">View</a>
+                            <a href="/science-fair/lunch.html">View</a>
                         </li>
                         <li>
                             <span>1:00 - Presentations</span>
-                            <a href="/presentations.html">View</a>
+                            <a href="/science-fair/presentations.html">View</a>
                         </li>
                         <li>
                             <span>3:00 - Fun Time</span>
-                            <a href="/fun-time.html">View</a>
+                            <a href="/science-fair/fun-time.html">View</a>
                         </li>
                         <li>
                             <span>4:00 - Awards</span>
-                            <a href="/awards.html">View</a>
+                            <a href="/science-fair/awards.html">View</a>
                         </li>
                         <li>
                             <span>4:15 - Happy Hour</span>
-                            <a href="/happy-hour.html">View</a>
+                            <a href="/science-fair/happy-hour.html">View</a>
                         </li>
                     </ol>
                 </section>
@@ -45,15 +45,15 @@
                     <ol>
                         <li>
                             <span>For Presenters</span>
-                            <a href="/for-presenters.html">View</a>
+                            <a href="/science-fair/for-presenters.html">View</a>
                         </li>
                         <li>
                             <span>Q&A</span>
-                            <a href="/q-and-a.html">View</a>
+                            <a href="/science-fair/q-and-a.html">View</a>
                         </li>
                         <li>
                             <span>Bonus</span>
-                            <a href="/bonus.html">View</a>
+                            <a href="/science-fair/bonus.html">View</a>
                         </li>
                     </ol>
                 </section>
