--- a/happy-hour.html
+++ b/happy-hour.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="/assets/smile-favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
     <title>Science Fair - Happy Hour</title>
 </head>
@@ -27,6 +27,7 @@
                 </section>
                 <section class="spacer"></section>
                 <section class="img-wrap"><img src="assets/gob-dance-now.gif" /></section>
+                <br/>
             </main>
         </div>
     </div> 
