--- a/fun-time.html
+++ b/fun-time.html
@@ -88,6 +88,8 @@
                     <p>Jon Moore is our Steve Harvey! Listen to him for direction on when you're "on stage."</p>
                     <p>We will be playing three rounds of Family Feud. The first game is Team 1 vs. Team 2; the second is Team 3 vs. Team 4. The winners will proceed to a championship “speed” round. You’ll be on the hot seat here, so get your thinking caps on.</p>
                     <p>You might remember being surveyed a few weeks ago... well, the questions you answered are reflected in the games!</p>
+                    <br>
+                    <p>...and since you actually made it this far, we'll let you in on a little secret: <span id="secret">Ally's bringing in Crumbl cookies to help fuel the fun...</span></p>
                 </section>
                 <section class="spacer"></section>
                 <section></section>
