--- a/lunch.html
+++ b/lunch.html
@@ -21,12 +21,18 @@
                 <section class="spacer"></section>
                 <section>
                     <h2>Hungry?</h2>
-                    <p>quick blurb about what's for lunch - with a note about anything that might happen during the noon hour block - introductions? work in something about chef ally</p>
+                    <p>Chef Ally is setting us up with some <strong>VERDE, Flavors of Mexico!</strong> *</p>
+                    <p>The first ten team members to slack Ally with promo code #YAY-FREE-LUNCH-2021 get their lunch absolutely free-of-charge! **</p>
+                    <p><span class="restrictions">
+                        *not pictured below<br>
+                        **many restrictions certainly apply, not valid in the following states: IN
+                    </span></p>
                 </section>
                 <section class="spacer"></section>
                 <section class="img-wrap">
                     <img src="assets/school-food.png" />
                 </section>
+                <br/>
             </main>
         </div>
     </div> 
