--- a/lunch.html
+++ b/lunch.html
@@ -22,7 +22,7 @@
                 <section>
                     <h2>Hungry?</h2>
                     <p>Chef Ally is setting us up with some <strong>VERDE, Flavors of Mexico!</strong> *</p>
-                    <p>The first ten team members to slack Ally with promo code #YAY-FREE-LUNCH-2021 get their lunch absolutely free-of-charge! **</p>
+                    <p>ALSO: the first ten team members to slack Ally with promo code <strong>YAYFREELUNCH2021</strong> get their lunch absolutely free-of-charge! **</p>
                     <p><span class="restrictions">
                         *not pictured below<br>
                         **many restrictions certainly apply, not valid in the following states: IN
