--- a/happy-hour.html
+++ b/happy-hour.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smiles.css">
     <title>Science Fair - Happy Hour</title>
 </head>
 <body>
+    <div class="smile green top-left"></div>
+    <div class="smile red mid-top-right rotate-180"></div>
+    <div class="smile blue bottom-right rotate-90"></div>
+    <div class="smile yellow top-mid-logo-cover"></div>
     <div class="container">
         <div class="inner">
             <header>
