--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smiles.css">
     <title>Science Fair</title>
 </head>
 <body>
+    <div class="smile red top-left rotate-270"></div>
+    <div class="smile blue mid-top-right"></div>
+    <div class="smile green mid-left-cut"></div>
     <div class="container">
         <div class="inner">
             <header>
