--- a/lunch.html
+++ b/lunch.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smiles.css">
     <title>Science Fair - Lunch</title>
 </head>
 <body>
+    <div class="smile blue mid-top-left"></div>
+    <div class="smile green top-right rotate-90"></div>
+    <div class="smile yellow bottom-right rotate-180"></div>
     <div class="container">
         <div class="inner">
             <header>
