--- a/presentations.html
+++ b/presentations.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smiles.css">
     <title>Science Fair - Presentations</title>
 </head>
 <body>
+    <div class="smile green mid-top-left"></div>
+    <div class="smile blue mid-top-right rotate-270"></div>
+    <div class="smile yellow mid-left-cut rotate-180"></div>
+    <!-- <div class="smile red top-mid-logo-cover rotate-30"></div> -->
     <div class="container">
         <div class="inner">
             <header>
