--- a/q-and-a.html
+++ b/q-and-a.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smiles.css">
     <title>Science Fair - Q&A</title>
 </head>
 <body>
+        <div class="smile green mid-top-right rotate-30"></div>
+        <div class="smile blue top-mid-under-logo rotate-270"></div>
+        <div class="smile yellow bottom-right"></div>
     <div class="container">
         <div class="inner">
             <header>
