--- a/awards.html
+++ b/awards.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smiles.css">
     <title>Science Fair - Awards</title>
 </head>
 <body>
+    <div class="smile red mid-top-left"></div>
+    <div class="smile blue mid-top-right rotate-90"></div>
+    <div class="smile green mid-right-edge rotate-90"></div>
+    <div class="smile yellow top-mid-under-logo rotate-180"></div>
     <div class="container">
         <div class="inner">
             <header>
