--- a/bonus.html
+++ b/bonus.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smiles.css">
     <title>Science Fair - Bonus</title>
 </head>
 <body>
+    <div class="smile red top-right rotate-180"></div>
+    <div class="smile green top-mid-under-logo rotate-170"></div>
+    <div class="smile yellow mid-left-cut"></div>
     <div class="container">
         <div class="inner">
             <header>
