--- a/for-presenters.html
+++ b/for-presenters.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="assets/smile-favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="smiles.css">
     <title>Science Fair - For Presenters</title>
 </head>
 <body>
+    <div class="smile yellow mid-top-right rotate-30"></div>
     <div class="container">
         <div class="inner">
             <header>
