moved bottom smileyz due to cross-device weirdness

--- a/happy-hour.html
+++ b/happy-hour.html
@@ -12,7 +12,7 @@
 <body>
     <div class="smile green top-left"></div>
     <div class="smile red mid-top-right rotate-180"></div>
-    <div class="smile blue bottom-right rotate-90"></div>
+    <!-- <div class="smile blue bottom-right rotate-90"></div> -->
     <div class="smile yellow top-mid-logo-cover"></div>
     <div class="container">
         <div class="inner">
