--- a/lunch.html
+++ b/lunch.html
@@ -12,7 +12,7 @@
 <body>
     <div class="smile blue mid-top-left"></div>
     <div class="smile green top-right rotate-90"></div>
-    <div class="smile yellow bottom-right rotate-180"></div>
+    <div class="smile yellow mid-top-right rotate-180"></div>
     <div class="container">
         <div class="inner">
             <header>
