added presentation schedule

--- a/presentations.html
+++ b/presentations.html
@@ -12,7 +12,7 @@
 <body>
     <div class="smile green mid-top-left"></div>
     <div class="smile blue mid-top-right rotate-270"></div>
-    <div class="smile yellow mid-left-cut rotate-180"></div>
+    <!-- <div class="smile yellow mid-left-cut rotate-180"></div> -->
     <!-- <div class="smile red top-mid-logo-cover rotate-30"></div> -->
     <div class="container">
         <div class="inner">
@@ -28,29 +28,135 @@
                     <ol>
                         <li>
                             <span>
-                                1:00 Project One<br/>
-                                <p>Team Leader</p>
+                                12:30 - Hard Things Book Club<br/>
+                                <p>Erica + Jesse</p>
                             </span>
                             <a href="/team-one.html">View</a>
                         </li>
                         <li>
                             <span>
-                                1:15 Project Two<br/>
-                                <p>Team Leader</p>
+                                12:35 - Better Travel<br/>
+                                <p>Lacey</p>
                             </span>
                             <a href="/team-two.html">View</a>
                         </li>
                         <li>
                             <span>
-                                1:30 Project Three<br/>
-                                <p>Team Leader</p>
+                                12:42 - Innovatemap UX Encyclopedia<br/>
+                                <p>Jon</p>
                             </span>
                             <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                12:52 - Operation Jigglypuff<br/>
+                                <p>Kaleem</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                1:02 - Operation Ohm<br/>
+                                <p>Allison</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                1:07 - The Spencer Project<br/>
+                                <p>Cassidy</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                1:14 - Latinos in Tech<br/>
+                                <p>Yhareli</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                1:24 - Flappy Map<br/>
+                                <p>Yhareli</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                1:30 - INTERMISSION<br/>
+                                <!-- <p></p> -->
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                1:40 - Product Design Process<br/>
+                                <p>Diana</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                1:50 - The Brand Illuminati of Figma<br/>
+                                <p>Tressa</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                1:55 - Dream, Design, Deliver<br/>
+                                <p>Kate</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                2:02 - Product Drops<br/>
+                                <p>Kaleem</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                2:09 - Marvelous<br/>
+                                <p>Tressa</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                2:16 - Jon, Jacob, JingePfeifer Shiiiiiitttt<br/>
+                                <p>Meghan</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                2:23 - Project Viking Chant<br/>
+                                <p>Piyush + Ashlyn</p>
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                2:30 - INTERMISSION<br/>
+                                <!-- <p></p> -->
+                            </span>
+                            <a href="/team-three.html">View</a>
+                        </li>
+                        <li>
+                            <span>
+                                2:40 - Fun Time<br/>
+                                <!-- <p></p> -->
+                            </span>
+                            <a href="/science-fair/fun-time.html">View</a>
                         </li>
                     </ol>
                 </section>
                 <section class="spacer"></section>
                 <section></section>
+                <br/>
             </main>
         </div>
     </div> 
