added slido link

--- a/q-and-a.html
+++ b/q-and-a.html
@@ -24,8 +24,9 @@
                 <main>
                 <section class="spacer"></section>
                 <section>
-                    <h2>Questions?</h2>
-                    <p>blurb about and link to slido</p>
+                    <h2>Questions during the presentations?</h2>
+                    <p>Check out our <a href="https://app.sli.do/event/kprvph4p">Slido</a>setup!</p>
+                    <p>If you have any issues, please reach out to Jesse.</p>
                 </section>
                 <section class="spacer"></section>
                 <section></section>
