--- a/q-and-a.html
+++ b/q-and-a.html
@@ -26,7 +26,7 @@
                 <section>
                     <h2>Questions during the presentations?</h2>
                     <p>Check out our <a href="https://app.sli.do/event/kprvph4p">Slido</a> setup! Please answer the poll question and then navigate to the Q&A tab to add your questions throughout the presentations. Feel free to submit with your name or anonymously if you prefer.</p>
-                    <p>If you have any issues or just need someone to remind you that you are amazing, please reach out to Jesse.</p>
+                    <p>If you have any issues or just need someone to remind you that you are an amazing person, please reach out to Jesse.</p>
                 </section>
                 <section class="spacer"></section>
                 <section></section>
