--- a/lunch.html
+++ b/lunch.html
@@ -28,8 +28,8 @@
                     <p>Chef Ally is setting us up with some <strong>VERDE, Flavors of Mexico!</strong> *</p>
                     <p>ALSO: the first ten team members to slack Ally with promo code <strong>YAYFREELUNCH2021</strong> get their lunch absolutely free-of-charge! **</p>
                     <p><span class="restrictions">
-                        *not pictured below<br>
-                        **many restrictions certainly apply, not valid in the following states: IN
+                        * not pictured below<br>
+                        ** not valid in the following states: IN
                     </span></p>
                 </section>
                 <section class="spacer"></section>
