--- a/presentations-with-links.html
+++ b/presentations-with-links.html
@@ -140,7 +140,7 @@
                         <li>
                             <span>
                                 2:12 - Marvelous<br/>
-                                <p>Tressa</p>
+                                <p>Tressa + Kate + Kaleem</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://app.pitch.com/app/presentation/aecafac1-c485-4ad6-bdc2-b80b4dc62761/f342501b-a0d5-4aad-83db-a1f38d5bec56" target="_blank">View</a>
