--- a/presentations.html
+++ b/presentations.html
@@ -96,7 +96,7 @@
                                 <p>Yhareli</p>
                             </span>
                             <a></a>
-                            <!-- <a href="" target="_blank">View</a> -->
+                            <!-- <a href="https://www.instagram.com/ar/3036036696675154/?ch=ZmY2MzQ2YjRhNmRhYjRlODZhNGFmOGQwYmI2MWE5Zjc%3D" target="_blank">View</a> -->
                         </li>
                         <li>
                             <span>
@@ -140,7 +140,7 @@
                         <li>
                             <span>
                                 2:12 - Marvelous<br/>
-                                <p>Tressa</p>
+                                <p>Tressa + Kate + Kaleem</p>
                             </span>
                             <a></a>
                             <!-- <a href="https://app.pitch.com/app/presentation/aecafac1-c485-4ad6-bdc2-b80b4dc62761/f342501b-a0d5-4aad-83db-a1f38d5bec56" target="_blank">View</a> -->
