--- a/presentations.html
+++ b/presentations.html
@@ -132,7 +132,7 @@
                         <li>
                             <span>
                                 2:05 - Product Drops<br/>
-                                <p>Kaleem</p>
+                                <p>Kaleem + Meghan</p>
                             </span>
                             <a></a>
                             <!-- <a href="" target="_blank">View</a> -->
